--- a/src/App.css
+++ b/src/App.css
@@ -1,4 +1,6 @@
- #root {
+@import url('https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&family=Open+Sans:ital,wght@0,300..800;1,300..800&display=swap');
+
+#root {
   max-width: 1280px;
   margin: 0 auto;
   padding: 2rem;
